force-app/main/default/objects/ResourceAbsence/fields/Ed_s_Change2__c.field-meta.xml
<CustomField>
    <fullName>Ed_s_Change2__c</fullName>
    <label>Ed&apos;s Change</label>
    <length>100</length>
    <type>Text</type>
</CustomField>