force-app/main/default/objects/ResourceAbsence/fields/field_abc2__c.field-meta.xml
<CustomField>
    <fullName>field_abc2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>field abc2</label>
    <type>Checkbox</type>
</CustomField>