force-app/main/default/objects/ResourceAbsence/fields/Field_abc__c.field-meta.xml
<CustomField>
    <fullName>Field_abc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field abc</label>
    <type>Checkbox</type>
</CustomField>