force-app/main/default/objects/ResourceAbsence/fields/field_foo__c.field-meta.xml
<CustomField>
    <fullName>field_foo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>field foo</label>
    <type>Checkbox</type>
</CustomField>